--- a/.github/workflows/main_bloodguard-api.yml
+++ b/.github/workflows/main_bloodguard-api.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          cd blood-guard-api
           npm install
           npm run build --if-present
           npm run test --if-present
@@ -37,7 +38,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: 'development'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
@@ -60,6 +61,6 @@ jobs:
         id: deploy-to-webapp
         with:
           app-name: 'bloodguard-api'
-          slot-name: 'Production'
+          slot-name: 'development'
           package: .
           
