--- a/blood-guard-ui/package.json
+++ b/blood-guard-ui/package.json
@@ -8,6 +8,7 @@
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "antd": "^5.22.7",
         "axios": "^1.7.7",
         "formik": "^2.4.6",
         "moment": "^2.30.1",
